--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=RadicalMotor
 spring.datasource.url=jdbc:mysql://localhost:3306/radical_care_db
 spring.datasource.username=root
-spring.datasource.password=toan
+spring.datasource.password=Tnhminh33
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
@@ -11,6 +11,7 @@ spring.thymeleaf.cache=false
 # Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.open-in-view=false
 
 ##Spring Security
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
@@ -26,7 +27,10 @@ server.error.path=/error
 
 #Server session properties
 server.servlet.session.timeout=30m
-
+server.servlet.session.cookie.name=SESSIONID
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.secure=false
+logging.level.org.springframework.security=DEBUG
 api.base.url=http://localhost:8080
 
 server.port=8081
